f/19 width fix with flex wrap on locatins page

--- a/_sass/layout/grid-sections.scss
+++ b/_sass/layout/grid-sections.scss
@@ -91,6 +91,7 @@
 }
 .flexium-start {
   @include flexium(start, start);
+  flex-wrap: wrap;
 }
 
 .flexium-auto-item {
